// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField "email" type input field renders an email input correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InputField
    boundValue=""
    label="Email"
    name="email"
    onInputChange={[Function]}
    type="email"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          htmlFor="email"
        >
          Email
          :
        </label>,
        <input
          className="bookly-input-field__input"
          disabled={false}
          id="email"
          name="email"
          onChange={[Function]}
          placeholder=""
          type="email"
          value=""
        />,
        undefined,
      ],
      "className": "bookly-input-field input-field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Email",
            ":",
          ],
          "htmlFor": "email",
        },
        "ref": null,
        "rendered": Array [
          "Email",
          ":",
        ],
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "bookly-input-field__input",
          "disabled": false,
          "id": "email",
          "name": "email",
          "onChange": [Function],
          "placeholder": "",
          "type": "email",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            htmlFor="email"
          >
            Email
            :
          </label>,
          <input
            className="bookly-input-field__input"
            disabled={false}
            id="email"
            name="email"
            onChange={[Function]}
            placeholder=""
            type="email"
            value=""
          />,
          undefined,
        ],
        "className": "bookly-input-field input-field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Email",
              ":",
            ],
            "htmlFor": "email",
          },
          "ref": null,
          "rendered": Array [
            "Email",
            ":",
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bookly-input-field__input",
            "disabled": false,
            "id": "email",
            "name": "email",
            "onChange": [Function],
            "placeholder": "",
            "type": "email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`InputField "password" type input field renders a password input correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InputField
    boundValue=""
    label="Password"
    name="password"
    onInputChange={[Function]}
    type="password"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          htmlFor="password"
        >
          Password
          :
        </label>,
        <input
          className="bookly-input-field__input"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          placeholder=""
          type="password"
          value=""
        />,
        undefined,
      ],
      "className": "bookly-input-field input-field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Password",
            ":",
          ],
          "htmlFor": "password",
        },
        "ref": null,
        "rendered": Array [
          "Password",
          ":",
        ],
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "bookly-input-field__input",
          "disabled": false,
          "id": "password",
          "name": "password",
          "onChange": [Function],
          "placeholder": "",
          "type": "password",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            htmlFor="password"
          >
            Password
            :
          </label>,
          <input
            className="bookly-input-field__input"
            disabled={false}
            id="password"
            name="password"
            onChange={[Function]}
            placeholder=""
            type="password"
            value=""
          />,
          undefined,
        ],
        "className": "bookly-input-field input-field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Password",
              ":",
            ],
            "htmlFor": "password",
          },
          "ref": null,
          "rendered": Array [
            "Password",
            ":",
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bookly-input-field__input",
            "disabled": false,
            "id": "password",
            "name": "password",
            "onChange": [Function],
            "placeholder": "",
            "type": "password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`InputField "text" type input field renders a text input correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InputField
    boundValue=""
    label="Whatever"
    name="text"
    onInputChange={[Function]}
    type="text"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          htmlFor="text"
        >
          Whatever
          :
        </label>,
        <input
          className="bookly-input-field__input"
          disabled={false}
          id="text"
          name="text"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />,
        undefined,
      ],
      "className": "bookly-input-field input-field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Whatever",
            ":",
          ],
          "htmlFor": "text",
        },
        "ref": null,
        "rendered": Array [
          "Whatever",
          ":",
        ],
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "bookly-input-field__input",
          "disabled": false,
          "id": "text",
          "name": "text",
          "onChange": [Function],
          "placeholder": "",
          "type": "text",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            htmlFor="text"
          >
            Whatever
            :
          </label>,
          <input
            className="bookly-input-field__input"
            disabled={false}
            id="text"
            name="text"
            onChange={[Function]}
            placeholder=""
            type="text"
            value=""
          />,
          undefined,
        ],
        "className": "bookly-input-field input-field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Whatever",
              ":",
            ],
            "htmlFor": "text",
          },
          "ref": null,
          "rendered": Array [
            "Whatever",
            ":",
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bookly-input-field__input",
            "disabled": false,
            "id": "text",
            "name": "text",
            "onChange": [Function],
            "placeholder": "",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
